kubernetes/apps/home-automation/home-assistant/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
