kubernetes/apps/home-automation/home-assistant/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-private
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 3g
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hass.keen.land
      secretName: keenland-homeassistant-ingress-cert
  rules:
    - host: hass.keen.land
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
